[package]
name = "rust-react-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
rand = "0.8.5"
serde = "1.0.147"
serde_json = "1.0.88"
mongodb = "2"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in docargo-watch = "8.4.1"
futures-util = "0.3.30"
futures = "0.3.30"
actix-rt = "2.2.0"
